--- a/notebook/eda.ipynb
+++ b/notebook/eda.ipynb
@@ -100,7 +100,7 @@
     "- **Remove Unnecessary Columns**: The `Unnamed: 6` column should be removed as it contains no useful information.\n",
     "- **Handle Missing Values**: Address missing values in the `SP.` columns. Options include:\n",
     "  - Imputing missing values with an average or median value.\n",
-    "  - Removing rows with missing values if they are insignificant. This is the recomended option as the standard variation is high meaning data varies widely and imputing will not communicate the reality. Also the value is dependent on valious factors such as specialty, category and nature of procedure. \n",
+    "  - Removing rows with missing values if they are insignificant. This is the recomended option as the standard variation is high meaning data varies widely and imputing will not communicate the reality. Also the value is dependent on various factors such as specialty, category and nature of procedure. \n",
     "- **Validate `SERVICE` Column**: Ensure that the entries in the `SERVICE` column align with expected values and clean any inconsistencies."
    ]
   },
